tests/ui/imports/ambiguous-9.stderr
error[E0659]: `date_range` is ambiguous
  --> $DIR/ambiguous-9.rs:23:5
   |
LL |     date_range();
   |     ^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `date_range` could refer to the function imported here
  --> $DIR/ambiguous-9.rs:19:5
   |
LL | use dsl::*;
   |     ^^^^^^
   = help: consider adding an explicit import of `date_range` to disambiguate
note: `date_range` could also refer to the function imported here
  --> $DIR/ambiguous-9.rs:20:5
   |
LL | use prelude::*;
   |     ^^^^^^^^^^
   = help: consider adding an explicit import of `date_range` to disambiguate

error[E0659]: `date_range` is ambiguous
  --> $DIR/ambiguous-9.rs:23:5
   |
LL |     date_range();
   |     ^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `date_range` could refer to the function imported here
  --> $DIR/ambiguous-9.rs:7:13
   |
LL |     pub use self::range::*;
   |             ^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `date_range` to disambiguate
note: `date_range` could also refer to the function imported here
  --> $DIR/ambiguous-9.rs:8:9
   |
LL |     use super::prelude::*;
   |         ^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `date_range` to disambiguate

warning: ambiguous glob re-exports
  --> $DIR/ambiguous-9.rs:7:13
   |
LL |     pub use self::range::*;
   |             ^^^^^^^^^^^^^^ the name `date_range` in the value namespace is first re-exported here
LL |     use super::prelude::*;
   |         ----------------- but the name `date_range` in the value namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: ambiguous glob re-exports
  --> $DIR/ambiguous-9.rs:15:13
   |
LL |     pub use self::t::*;
   |             ^^^^^^^^^^ the name `date_range` in the value namespace is first re-exported here
LL |     pub use super::dsl::*;
   |             ------------- but the name `date_range` in the value namespace is also re-exported here

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0659`.
